syntax = "proto3";

option go_package = "github.com/wignn/micro";

service CreateOrderService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
}

message Order {
    int32 OrderID = 1;
    int32 CustomerID = 2;
    int32 ProductID = 3;
    int32 Quantity = 4;
    string Status = 5;
}


message CreateOrderRequest {
    uint32 customerID = 1;
    uint32 productID = 2;
    uint32 quantity = 3;
}

message CreateOrderResponse {
    string status = 1;  
}

message GetOrderRequest {
    int32 customerID = 1;
}

message GetOrderResponse {
    repeated Order orders = 1;
}